APP-META/manifests/customer/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamone-customer-system-deployment
  labels:
    run: dreamone-customer-system
    name: dreamone-customer-system
spec:
  imagePullSecrets:
    - name: acr-credential-dreamone-customer-system
  replicas: 1
  selector:
    matchLabels:
      run: dreamone-customer-system
  template:
    metadata:
      labels:
        run: dreamone-customer-system
        armsPilotAutoEnable: "on"
        armsPilotCreateAppName: "dreamone-customer-system"
    spec:
      containers:
      - image: ${IMAGE}
        name: app
