APP-META/manifests/customer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamone-customer-system
  namespace: dreamone-customer-system
  labels:
    micrometer-prometheus-discovery: 'true'
spec:
  selector:
    run: dreamone-customer-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: server
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: page
    - protocol: TCP
      port: 8091
      targetPort: 8091
      name: metrics
